<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.dami.jamonos.Campos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="48dp" >

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/img_welcomw"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            />

        <TextView
            android:id="@+id/et_nombres_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombres_welcome"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/space_x3"

            />

        <TextView
            android:id="@+id/et_apellidos_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidos_welcome"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/space_x3"

            />


        <TextView
            android:id="@+id/et_correo_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/correo_welcome"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/space_x3"
            />

        <TextView
            android:id="@+id/et_contra_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/contrase_a_welcome_2"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/space_x3"
            />

        <TextView
            android:id="@+id/et_repcontra_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contrase_a_welcome"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/space_x3"
            />




    </LinearLayout>




</RelativeLayout>